# flume-wasm-atomics-test

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
assets/: main.js  worker.js
src/: main.rs
