[package]
name = "flume-wasm-atomics-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
parking_lot = "0.12.1"

console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
